# QTalk

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/app/: CMakeLists.txt  main.cpp
src/common/: CMakeLists.txt  ToolLog.cpp  ToolLog.h
src/im/: CMakeLists.txt  Client.cpp  Client.h  ClientInformation.cpp  ClientInformation.h  ClientManager.cpp  ClientManager.h  ClientThreadManager.cpp  ClientThreadManager.h  Connection.cpp  Connection.h  ControlCenter.cpp  ControlCenter.h  ControlCenterPrivate.cpp  ControlCenterPrivate.h  Crypt.cpp  Crypt.h  CryptEngine.cpp  CryptEngine.h  Message.cpp  Message.h  MessageInformation.cpp  MessageInformation.h  MessageServer.cpp  MessageServer.h  RSAPair.cpp  RSAPair.h  SecureTunnel.cpp  SecureTunnel.h  UserSettings.cpp  UserSettings.h
src/im/interfaces/: IClient.cpp  IClient.h  IClientManager.cpp  IClientManager.h  IConnection.cpp  IConnection.h  IControlCenter.cpp  IControlCenter.h  ICryptEngine.cpp  ICryptEngine.h  IServer.cpp  IServer.h  IUserSettings.cpp  IUserSettings.h
src/server/: CMakeLists.txt  main.cpp
src/ui/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  UiManager.cpp  UiManager.h  main.cpp  qml.qrc
src/ui/component/: CusSliderBar.qml  CusToolBar.qml  CusToolButton.qml  CusWindow.qml
src/ui/layout/: AppSettings.qml  FileTransfer.qml  Main.qml  Messenger.qml  PackerColor.qml  QuickConnect.qml  TransferManager.qml  Welcome.qml
src/ui/res/: AppControls.qml  main.qml
src/ui/storage/: AppStorage.qml  Theme.qml  qmldir
